examples/test/testpolicy13748.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13748
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key35: value14
      key23: value17
      key31: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value20
          key44: value10
          key42: value17
      podSelector:
        matchLabels:
          key8: value32
